tests/ui/error-codes/E0620.stderr
error[E0620]: cast to unsized type: `&[usize; 2]` as `[usize]`
  --> $DIR/E0620.rs:2:16
   |
LL |     let _foo = &[1_usize, 2] as [usize];
   |                ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: consider casting to a reference instead
   |
LL |     let _foo = &[1_usize, 2] as &[usize];
   |                                 +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0620`.
